--- a/.env
+++ b/.env
@@ -117,22 +117,22 @@ JVB_ADVERTISE_IPS=145.223.21.25
 #
 
 # Enable authentication (will ask for login and password to join the meeting)
-ENABLE_AUTH=1
+# ENABLE_AUTH=1
 
 # Enable guest access (if authentication is enabled, this allows for users to be held in lobby until registered user lets them in)
 #ENABLE_GUESTS=1
 
 # Select authentication type: internal, jwt, ldap or matrix
-AUTH_TYPE=jwt
+# AUTH_TYPE=jwt
 
 # JWT authentication
 #
 
 # Application identifier
-JWT_APP_ID=5F9D4
+# JWT_APP_ID=5F9D4
 
 # Application secret known only to your token generator
-JWT_APP_SECRET=7F53ECFCC549E743D4D360F4684FE3B1
+# JWT_APP_SECRET=7F53ECFCC549E743D4D360F4684FE3B1
 
 # (Optional) Set asap_accepted_issuers as a comma separated list
 #JWT_ACCEPTED_ISSUERS=my_web_client,my_app_client
