--- a/.env
+++ b/.env
@@ -120,12 +120,15 @@ JVB_ADVERTISE_IPS=145.223.21.25
 ENABLE_AUTH=1
 
 # Enable guest access (if authentication is enabled, this allows for users to be held in lobby until registered user lets them in)
-#ENABLE_GUESTS=1
+ENABLE_GUESTS=1
 
 # Select authentication type: internal, jwt, ldap or matrix
 AUTH_TYPE=jwt
+ENABLE_AUTO_LOGIN=1
 
 # JWT authentication
+JWT_AUTH_TYPE=token
+JWT_TOKEN_AUTH_MODULE=token_verification 
 #
 
 # Application identifier
