--- a/.env
+++ b/.env
@@ -35,7 +35,7 @@ PUBLIC_URL=https://meeting.hoclientuc.vn
 # This setting deprecates DOCKER_HOST_ADDRESS, and supports a comma separated list of IPs
 # See the "Running behind NAT or on a LAN environment" section in the Handbook:
 # https://jitsi.github.io/handbook/docs/devops-guide/devops-guide-docker#running-behind-nat-or-on-a-lan-environment
-JVB_ADVERTISE_IPS=145.223.21.25
+# JVB_ADVERTISE_IPS=145.223.21.25
 
 #
 # Memory limits for Java components
