--- a/.env
+++ b/.env
@@ -117,13 +117,13 @@ PUBLIC_URL=https://meeting.hoclientuc.vn
 #
 
 # Enable authentication (will ask for login and password to join the meeting)
-ENABLE_AUTH=1
+# ENABLE_AUTH=1
 
 # Enable guest access (if authentication is enabled, this allows for users to be held in lobby until registered user lets them in)
 ENABLE_GUESTS=1
 
 # Select authentication type: internal, jwt, ldap or matrix
-AUTH_TYPE=jwt
+# AUTH_TYPE=jwt
 ENABLE_AUTO_LOGIN=1
 
 # JWT authentication
@@ -132,10 +132,10 @@ JWT_TOKEN_AUTH_MODULE=token_verification
 #
 
 # Application identifier
-JWT_APP_ID=5F9D4
+# JWT_APP_ID=5F9D4
 
 # Application secret known only to your token generator
-JWT_APP_SECRET=7F53ECFCC549E743D4D360F4684FE3B1
+# JWT_APP_SECRET=7F53ECFCC549E743D4D360F4684FE3B1
 
 # (Optional) Set asap_accepted_issuers as a comma separated list
 #JWT_ACCEPTED_ISSUERS=my_web_client,my_app_client
