--- a/.env
+++ b/.env
@@ -19,10 +19,10 @@
 CONFIG=~/.jitsi-meet-cfg
 
 # Exposed HTTP port (will redirect to HTTPS port)
-HTTP_PORT=8765
+HTTP_PORT=8000
 
 # Exposed HTTPS port
-HTTPS_PORT=8766
+HTTPS_PORT=8442
 
 # System time zone
 TZ=UTC
@@ -35,7 +35,7 @@ PUBLIC_URL=https://meeting.hoclientuc.vn
 # This setting deprecates DOCKER_HOST_ADDRESS, and supports a comma separated list of IPs
 # See the "Running behind NAT or on a LAN environment" section in the Handbook:
 # https://jitsi.github.io/handbook/docs/devops-guide/devops-guide-docker#running-behind-nat-or-on-a-lan-environment
-# JVB_ADVERTISE_IPS=145.223.21.25
+JVB_ADVERTISE_IPS=145.223.97.224
 
 #
 # Memory limits for Java components
@@ -120,15 +120,12 @@ PUBLIC_URL=https://meeting.hoclientuc.vn
 # ENABLE_AUTH=1
 
 # Enable guest access (if authentication is enabled, this allows for users to be held in lobby until registered user lets them in)
-ENABLE_GUESTS=1
+#ENABLE_GUESTS=1
 
 # Select authentication type: internal, jwt, ldap or matrix
 # AUTH_TYPE=jwt
-ENABLE_AUTO_LOGIN=1
 
 # JWT authentication
-JWT_AUTH_TYPE=token
-JWT_TOKEN_AUTH_MODULE=token_verification 
 #
 
 # Application identifier
