--- a/.env
+++ b/.env
@@ -41,8 +41,8 @@ JVB_ADVERTISE_IPS=145.223.97.224
 # Memory limits for Java components
 #
 
-#JICOFO_MAX_MEMORY=3072m
-#VIDEOBRIDGE_MAX_MEMORY=3072m
+JICOFO_MAX_MEMORY=3072m
+VIDEOBRIDGE_MAX_MEMORY=3072m
 
 #
 # JaaS Components (beta)
@@ -223,3 +223,9 @@ JIBRI_XMPP_PASSWORD=78d3a962492de37606f701c63626491e
 
 # Jitsi image version (useful for local development)
 #JITSI_IMAGE_VERSION=latest
+
+# Cấu hình thêm cho JVB
+JVB_TCP_PORT=4443
+JVB_TCP_MAPPED_PORT=4443
+JVB_ENABLE_APIS=rest,colibri
+JVB_WS_SERVED_TYPES=colibri-ws
