--- a/.env
+++ b/.env
@@ -226,3 +226,16 @@ JIBRI_XMPP_PASSWORD=78d3a962492de37606f701c63626491e
 
 # Jitsi image version (useful for local development)
 #JITSI_IMAGE_VERSION=latest
+
+# Cấu hình JVB
+JVB_TCP_HARVESTER_DISABLED=false
+JVB_TCP_PORT=4443
+JVB_TCP_MAPPED_PORT=4443
+JVB_STUN_SERVERS=meet-jit-si-turnrelay.jitsi.net:443
+
+# Tăng giới hạn bộ nhớ
+JICOFO_MAX_MEMORY=4096m
+VIDEOBRIDGE_MAX_MEMORY=4096m
+
+# Thêm cấu hình NAT và ICE
+JVB_ENABLE_ICE_TCP=1
