--- a/.env
+++ b/.env
@@ -120,15 +120,12 @@ JVB_ADVERTISE_IPS=145.223.97.224
 # ENABLE_AUTH=1
 
 # Enable guest access (if authentication is enabled, this allows for users to be held in lobby until registered user lets them in)
-ENABLE_GUESTS=1
+#ENABLE_GUESTS=1
 
 # Select authentication type: internal, jwt, ldap or matrix
 # AUTH_TYPE=jwt
-ENABLE_AUTO_LOGIN=1
 
 # JWT authentication
-JWT_AUTH_TYPE=token
-JWT_TOKEN_AUTH_MODULE=token_verification 
 #
 
 # Application identifier
@@ -226,16 +223,3 @@ JIBRI_XMPP_PASSWORD=78d3a962492de37606f701c63626491e
 
 # Jitsi image version (useful for local development)
 #JITSI_IMAGE_VERSION=latest
-
-# Cấu hình JVB
-JVB_TCP_HARVESTER_DISABLED=false
-JVB_TCP_PORT=4443
-JVB_TCP_MAPPED_PORT=4443
-JVB_STUN_SERVERS=meet-jit-si-turnrelay.jitsi.net:443
-
-# Tăng giới hạn bộ nhớ
-JICOFO_MAX_MEMORY=4096m
-VIDEOBRIDGE_MAX_MEMORY=4096m
-
-# Thêm cấu hình NAT và ICE
-JVB_ENABLE_ICE_TCP=1
