--- a/.env
+++ b/.env
@@ -22,20 +22,20 @@ CONFIG=~/.jitsi-meet-cfg
 HTTP_PORT=8000
 
 # Exposed HTTPS port
-HTTPS_PORT=8442
+HTTPS_PORT=8443
 
 # System time zone
 TZ=UTC
 
 # Public URL for the web service (required)
 # Keep in mind that if you use a non-standard HTTPS port, it has to appear in the public URL
-PUBLIC_URL=https://meeting.hoclientuc.vn
+PUBLIC_URL=https://meeting.hoclientuc.vn/
 
 # Media IP addresses to advertise by the JVB
 # This setting deprecates DOCKER_HOST_ADDRESS, and supports a comma separated list of IPs
 # See the "Running behind NAT or on a LAN environment" section in the Handbook:
 # https://jitsi.github.io/handbook/docs/devops-guide/devops-guide-docker#running-behind-nat-or-on-a-lan-environment
-JVB_ADVERTISE_IPS=145.223.97.224
+#JVB_ADVERTISE_IPS=192.168.1.1,1.2.3.4
 
 #
 # Memory limits for Java components
@@ -117,22 +117,22 @@ JVB_ADVERTISE_IPS=145.223.97.224
 #
 
 # Enable authentication (will ask for login and password to join the meeting)
-# ENABLE_AUTH=1
+#ENABLE_AUTH=1
 
 # Enable guest access (if authentication is enabled, this allows for users to be held in lobby until registered user lets them in)
 #ENABLE_GUESTS=1
 
 # Select authentication type: internal, jwt, ldap or matrix
-# AUTH_TYPE=jwt
+#AUTH_TYPE=internal
 
 # JWT authentication
 #
 
 # Application identifier
-# JWT_APP_ID=5F9D4
+#JWT_APP_ID=my_jitsi_app_id
 
 # Application secret known only to your token generator
-# JWT_APP_SECRET=7F53ECFCC549E743D4D360F4684FE3B1
+#JWT_APP_SECRET=my_jitsi_app_secret
 
 # (Optional) Set asap_accepted_issuers as a comma separated list
 #JWT_ACCEPTED_ISSUERS=my_web_client,my_app_client
@@ -197,22 +197,22 @@ JVB_ADVERTISE_IPS=145.223.97.224
 #
 
 # XMPP password for Jicofo client connections
-JICOFO_AUTH_PASSWORD=05c0469251abbf1a6f8c2c5d9d142767
+JICOFO_AUTH_PASSWORD=39709b46967b1c106a7590161e71ded5
 
 # XMPP password for JVB client connections
-JVB_AUTH_PASSWORD=aa91f68cc1e73bc7339b5a10be69b7bb
+JVB_AUTH_PASSWORD=e09bd4082c41756b47b6fbad9bca777b
 
 # XMPP password for Jigasi MUC client connections
-JIGASI_XMPP_PASSWORD=72ba708db1f60557cd7d44deb091fe83
+JIGASI_XMPP_PASSWORD=62b332509e53c052b5b8f31654d67ef7
 
 # XMPP password for Jigasi transcriber client connections
-JIGASI_TRANSCRIBER_PASSWORD=0c933e3d723e16dda26984ee7929fdec
+JIGASI_TRANSCRIBER_PASSWORD=9315df0089e97db6efb091e21a421dda
 
 # XMPP recorder password for Jibri client connections
-JIBRI_RECORDER_PASSWORD=99e0c7791b78a2d43c713610822aed5f
+JIBRI_RECORDER_PASSWORD=b3317d4e5657286942aa2d044c496eb1
 
 # XMPP password for Jibri client connections
-JIBRI_XMPP_PASSWORD=78d3a962492de37606f701c63626491e
+JIBRI_XMPP_PASSWORD=58f424124f1a29a190bcc821c0117017
 
 #
 # Docker Compose options
