--- a/.env
+++ b/.env
@@ -29,13 +29,13 @@ TZ=UTC
 
 # Public URL for the web service (required)
 # Keep in mind that if you use a non-standard HTTPS port, it has to appear in the public URL
-PUBLIC_URL=https://meeting.hoclientuc.vn/
+PUBLIC_URL=https://meeting.hoclientuc.vn
 
 # Media IP addresses to advertise by the JVB
 # This setting deprecates DOCKER_HOST_ADDRESS, and supports a comma separated list of IPs
 # See the "Running behind NAT or on a LAN environment" section in the Handbook:
 # https://jitsi.github.io/handbook/docs/devops-guide/devops-guide-docker#running-behind-nat-or-on-a-lan-environment
-#JVB_ADVERTISE_IPS=192.168.1.1,1.2.3.4
+JVB_ADVERTISE_IPS=145.223.97.224
 
 #
 # Memory limits for Java components
