--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ TZ=UTC
 
 # Public URL for the web service (required)
 # Keep in mind that if you use a non-standard HTTPS port, it has to appear in the public URL
-PUBLIC_URL=https://meeting.hoclientuc.vn
+PUBLIC_URL=https://meeting.minhtuandng.id.vn
 
 # Media IP addresses to advertise by the JVB
 # This setting deprecates DOCKER_HOST_ADDRESS, and supports a comma separated list of IPs
@@ -117,7 +117,7 @@ JVB_ADVERTISE_IPS=88.222.242.207
 #
 
 # Enable authentication (will ask for login and password to join the meeting)
-ENABLE_AUTH=1
+ENABLE_AUTH=0
 
 ENABLE_AUTO_LOGIN=1
 
