Update .env configuration for JVB advertisement IP and authentication settings; add token moderation plugin for room management.

--- a/.env.backup
+++ b/.env.backup
@@ -122,13 +122,13 @@ ENABLE_AUTH=1
 AUTH_TYPE=jwt
 JWT_APP_ID=5F9D4
 JWT_APP_SECRET=7F53ECFCC549E743D4D360F4684FE3B1
-JWT_ALLOW_EMPTY=0
-ENABLE_GUESTS=0
-ENABLE_AUTO_OWNER=false
-ENABLE_MODERATOR_CHECKS=true
+APP_ID=5F9D4
+APP_SECRET=7F53ECFCC549E743D4D360F4684FE3B1
+ENABLE_AUTO_LOGIN=1
 # AUTH --
 
 # Enable guest access (if authentication is enabled, this allows for users to be held in lobby until registered user lets them in)
+ENABLE_GUESTS=1
 
 # Select authentication type: internal, jwt, ldap or matrix
 
@@ -228,4 +228,3 @@ JIBRI_XMPP_PASSWORD=58f424124f1a29a190bcc821c0117017
 
 # Jitsi image version (useful for local development)
 #JITSI_IMAGE_VERSION=latest
-XMPP_MUC_MODULES=token_moderation
