Add JWT authentication guide and update .env for lobby configuration

--- a/.env
+++ b/.env
@@ -229,3 +229,7 @@ JIBRI_XMPP_PASSWORD=58f424124f1a29a190bcc821c0117017
 # Jitsi image version (useful for local development)
 #JITSI_IMAGE_VERSION=latest
 XMPP_MUC_MODULES=token_moderation
+
+# Lobby Configuration
+# Bật lobby mặc định cho tất cả phòng mới
+# XMPP_MUC_CONFIGURATION=muc_room_default_public = false,muc_room_default_members_only = true
